2001-08-03  Arturo Espinosa Aldama  <arturo@ximian.com>

	* file.pl.in (xst_file_run_pipe_read): New utility to run commands
	that will be piped for reading.
	(xst_file_run): use xst_file_get_cmd_path now.
	(xst_file_get_cmd_path): Taken from xst_file_run to generate command.
	* *.in: Replaced a bunch of open "blah|" calls with xst_file_run_pipe_read.

2001-07-30  Tambet Ingo  <tambet@ximian.com>

	* boot.pl.in (xst_boot_known_var): Deal only with selected list of keywords.
	(xst_boot_conf_edit_image): Rewrote it. It's now much safer since it doesn't
	touch anything else than really needed (value part).
	(xst_boot_conf_set_images): Match images based on key, not name and image location.
	(xst_boot_set_global): Improved quoting of values with spaces or with '='.

	* boot-conf.in (xml_parse_boot): Removed some unused keywords.

2001-07-28  Tambet Ingo  <tambet@ximian.com>

	* x.pl.in (x_update_display_mode): Chop off additional space.

	* boot.pl.in (xst_boot_conf_is_image): Try default label also.
	(xst_boot_conf_delete_image): Fixed bug of deletion of last image.
	(xst_boot_conf_edit_image): Quote values which have '=' mark.
	(xst_boot_conf_add_image): Ditto.
	(_lilo_fix_images): New. Add 'label' field if it's missing.
	(xst_boot_conf_fix): New.

	* boot-conf.in (set): Don't flush conf file if XML was invalid or missing.

2001-07-26  Tambet Ingo  <tambet@ximian.com>

	* x.pl.in (x_update_display_mode): Remove extra space from we added before.

2001-07-26  Hans Petter Jansson  <hpj@ximian.com>

	* display-conf.in: Add debian-2.2 to supported platforms. Tested and
	  working.

	* print-conf.in: Remove debian-2.2 from supported platforms. This
	  is officially not supported yet.

2001-07-26  Tambet Ingo  <tambet@ximian.com>

	* display-conf.in (test): Oops, forogt that.

	* x.pl.in (x_config_fix): Support XFree86 v3 also.

	* display-conf.in (xml_print): ditto.

Wed Jul 25 03:45:51 2001  Arturo Espinosa Aldama  <arturo@ximian.com>
