@@ -42,7 +42,7 @@ require "___scriptsdir___/network.pl";
 
 $name = "internetsharing";
 $version = "___version___";
-@platforms = ("redhat-7.1");
+@platforms = ("redhat-7.1", "redhat-7.0", "mandrake-7.2");
 
 $description =<<"end_of_description;";
        Sets up firewall rules for a basic internet sharing (masq)
@@ -80,15 +80,66 @@ sub xml_parse
 }
 
 
+sub xst_ishare_get_linux22_support_active
+{
+  my ($hash) = @_;
+  my $forward_file = "/proc/sys/net/ipv4/ip_forward";
+  my ($fd, $val);
+  
+  $fd = &xst_file_open_read_from_names ($forward_file);
+  $val = <$fd>;
+  chomp $val;
+  $$hash{"active"} = ($val == 1)? 1: 0;
+  close $fd;
+}
+  
+
+sub xst_ishare_get_linux22_support
+{
+  my ($hash) = @_;
+  my ($forward_file, $masq_file) =
+      ("/proc/sys/net/ipv4/ip_forward", "/proc/sys/net/ipv4/ip_masq_debug");
+
+  $$hash{"forwarding"}   = (-f $forward_file)? 1: 0;
+  $$hash{"masquerading"} = (-f $masq_file)?    1: 0;
+}
+
+
 sub xst_ishare_fwrules_get_ipchains
 {
   my ($ipchains_conf) = @_;
+  my (%hash, $fd, $val);
+
+  $hash{"tools"} = &xst_file_tool_installed ("ipchains");
+
+  if ($hash{"tools"})
+  {
+    $fd = &xst_file_run_pipe_read ('ipchains-save 2>/dev/null | grep "^-A forward.*MASQ\$"');
+    if ($fd ne undef)
+    {
+      $val = <$fd>;
+      $hash{"configured"} = ($val =~ /MASQ$/)? 1: 0;
+      close $fd;
+    }
+  }
+
+  &xst_ishare_get_linux22_support (\%hash);
+  &xst_ishare_get_linux22_support_active (\%hash) if ($hash{"configured"});
+
+  return \%hash;
+}
+
+
+sub xst_ishare_dhcp_mdk72_get
+{
+  my ($dhcpd_conf) = @_;
   my (%hash);
 
-  $hash{"installed"} = &xst_file_tool_installed ("ipchains");
-
-  $hash{"installed"} = 0 if (! -f 
+  $hash{"installed"}  = &xst_service_sysv_installed ("dhcpd");
+  $hash{"configured"} = ((-f "/etc/dhcpd.conf")? 1: 0)         if $hash{"installed"};
+  $hash{"active"}     = &xst_service_sysv_get_status ("dhcpd") if $hash{"configured"};
   
+  return \%hash;
 }
 
 
@@ -212,25 +263,25 @@ sub conf_get_parse_table
 {
   my %dist_map =
   (
-   "redhat-7.0"   => "redhat-7.1",
-   "redhat-7.1"   => "redhat-7.1",
+   "redhat-7.0"   => "mandrake-7.2",
+   "redhat-7.1"   => "mandrake-7.2",
+   "mandrake-7.2" => "mandrake-7.2"
    );
 
   my %dist_tables =
       (
-       "redhat-7.1" =>
+       "mandrake-7.2" =>
        {
          fn =>
          {
            IPCHAINS_CONF => "/etc/sysconfig/ipchains",
-           PROC_IPV4_FW  => "/proc/sys/net/ipv4/ip_forward",
            DHCPD_CONF    => "/etc/dhcpd.conf"
          },
          table =>
              [
               [ "interface", \&xst_network_interfaces_get ],
-              [ "fwrules",   \&xst_ishare_fwrules_get_ipchains, [IPCHAINS_CONF, PROC_IPV4_FW]],
-              [ "dhcp",      \&xst_ishare_dhcp_get,             DHCPD_CONF],
+              [ "fwrules",   \&xst_ishare_fwrules_get_ipchains, IPCHAINS_CONF],
+              [ "dhcp",      \&xst_ishare_dhcp_mdk72_get,       DHCPD_CONF],
               ]
                 },
        );
